I corrected account page on mobile

--- a/src/app/(pages)/account/OrdersList/index.module.scss
+++ b/src/app/(pages)/account/OrdersList/index.module.scss
@@ -29,6 +29,9 @@
   padding: 0;
   list-style: none;
   border-left: 1px solid rgb(230, 230, 230);
+  @include small-break {
+    border-left: none;
+  }
 }
 
 .item {
@@ -39,6 +42,10 @@
   align-items: center;
   gap: calc(var(--base) / 2);
   text-decoration: none;
+  @include small-break {
+    padding: 12px;
+    flex-direction: column;
+  }
 }
 
 .itemContent {
